# aetherframe

./: .gitignore  BUILD_INSTALLERS.md  DOCKER_ALLINONE_README.md  Dockerfile.allinone  FRESH_INIT_GUIDE.md  FRESH_INIT_STATUS.md  LANGUAGE_STATUS.md  MIGRATION_GUIDE.md  MONOREPO_STRUCTURE.md  NEW_REPO_GUIDE.md  OPTION3_COMPLETE.md  PHASE2_FRONTEND_COMPLETE.md  PHASE3.5_MONOREPO_COMPLETE.md  PHASE3_ANALYTICS_COMPLETE.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.0.0.md  STAGE_PACKS.md  architecture.md  backend_success_summary.md  demo-ecosystem.sh  docker-compose.allinone.yml  launch-full-ecosystem.sh  prepare-demo-recording.sh  start.sh
.github/workflows/: build-desktop.yml
AetherFrame/: docker-compose.yml  requirements.txt
AetherFrame/tests/: test_integration.py  test_umbriel.py
ReverisNoctis/: launch-reveris.sh  package-lock.json  package.json
ReverisNoctis/cli/: main.py
ReverisNoctis/src/: App.jsx  styles.css
ReverisNoctis/src-tauri/: Cargo.toml  tauri.conf.json
ReverisNoctis/src-tauri/src/: main.rs
assets/: aetherframe-ecosystem-demo.cast
docker/: aetherframe.conf  nginx.conf  supervisord.conf
plugins/laintrace/: __init__.py  plugin.py
plugins/mnemosyne/: plugin.py  setup.py
plugins/noema/: __init__.py  plugin.py  setup.py
plugins/static_analyzer/: __init__.py  plugin.yaml
plugins/umbriel/: README.md  __init__.py  plugin.py  plugin.yaml  setup.py
plugins/valkyrie/: plugin.yaml  setup.py
scripts/: fresh-init.sh  install-all.py  new-repo-setup.sh  restructure.py
tests/samples/: test.c
(+39 files in other folders)
